--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -8,3 +8,14 @@
 .activecup{
 	border-radius: 50%; !important;
 }
+.message{
+        padding: 5px 5px 5px 5px;
+}
+.username{
+        font-weight: strong;
+        color: #0f0;
+}
+.msgContainerDiv{
+        overflow-y: scroll;
+        height: 250px;
+}
